# rust-grpc-chat

./: Cargo.toml  build.rs  flake.nix
proto/: chat.proto  greeter.proto
src/: chat.rs  db.rs  greeter.rs  lib.rs  main.rs
