[package]
name = "rust-grpc-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build = "0.12"
